--- a/culinaria/processar/index.pt.Rmd
+++ b/culinaria/processar/index.pt.Rmd
@@ -8,6 +8,7 @@ tags: []
 disableReadmoreNav: true
 disable_comments: false
 weight: 2
+draft: false
 ---
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
@@ -53,28 +54,23 @@ hero_img(titulo = "Processar",
 
 resumo_wrapper(lista = tags$ul(
              tags$li("O processamento de alimentos pode ser realizado nas fogueiras e nos fogões;"),
-             tags$li("12 ingredientes podem ser processados a partir de outros ingredientes;"),
-             tags$li("Não é possível ", tags$code("cancelar"), "o processamento, uma vez que você já tenha iniciado;"),
-             tags$li("A fila de processamento é de 99 itens para cada produto."),
+             tags$li("Ao todo estão disponíveis", tags$strong("12 ingredientes"), "que podem ser obtidos através de", tags$code("Processar"), ";"),
+             tags$li("Não é possível ", tags$strong("cancelar"), "o processamento, uma vez que você já o tenha iniciado;"),
+             tags$li("A fila de processamento é de", tags$strong("99 itens") ,"para", tags$strong("cada produto"), ", e;"),
+             tags$li("Após a finalização do procesamento, o item", tags$strong("não é disponibilizado") ,"automaticamente no inventário.")
              ))
 ```
 
-Atualmente a função `processar` presente na função `culinária` pode gerar 12 novos ingredientes, das quais serão utilizados na elaboração de outros pratos.
+Atualmente a função `processar` presente em `culinária` pode gerar 12 novos ingredientes, das quais serão utilizados na elaboração de outros pratos. A figura abaixo mostra a janela de `Processar`.
 
-```{r}
+```{r carousel-process}
 carousel_n_images(
-      
-        # Definição de ID.
-        id = "carousel1",
-        
-        # Endereços das imagens.
-        url_list = list("../culinaria/1_1_process.png"),
-        
-        # Alt de cada uma das imagens.
-        alt_list = list("Nível de preparação Concluído que resulta em pratos Esquisitos.")
-        )
+  single = TRUE,
+  id = "1",
+  url_list = list("1_1_process.png", "1_2_process_waiting.png"),
+  alt_list = list("Tipos de produtos que podem ser obtidos através do processamento.", "Tempo de espera para obter os produtos processados.")
+  )
 ```
-
 
 ```{r alert-warning-duration}
 # SUCCESS ALERT do Nível de Preparação
@@ -83,7 +79,7 @@ alert_icon(type = "warning",
               tags$span(
                   "O processamento de alimentos ",
                   tags$strong("não é  imediato"),
-                  ", desta forma cada novo ingrediente possui um tempo de preparo."
+                  ", logo para cada produto escolhido terá um tempo de preparo."
               ))
            )
 ```
@@ -276,7 +272,16 @@ tags$table(class="table table-striped table-hover",
 
 <h5 id="queue" class="genshin_font" style="padding-top: 90px; margin-top: -90px;">Fila de Processamento</h5>
 
-O `processamento` possui uma fila de execução de trabalhos de até **99 slots** para cada tipo de ingrediente, cada ingrediente será produzido de maneira unitária tendo assim a sua própria fila de processamento.
+O `processamento` possui uma fila de execução de trabalhos de até **99 slots** para cada tipo de ingrediente, cada ingrediente será produzido de maneira unitária tendo assim a sua própria fila de processamento. Além disso, após o processamento ser finalizado, ele não é enviado automaticamente para o inventário, deste modo será necessário clicar em **obter** para disponibilizá-lo para `cozinhar`.
+
+```{r carousel-process-queue-done}
+carousel_n_images(
+  single = TRUE,
+  id = "2",
+  url_list = list("2_1_process_queue.png", "2_2_process_done.png"),
+  alt_list = list("Fila de espera para que o produto fique pronto.", "Alimentos processados e prontos para serem recolhidos.")
+  )
+```
 
 ```{r alert-warning-cancel}
 # SUCCESS ALERT do Nível de Preparação
@@ -288,6 +293,162 @@ alert_icon(type = "warning",
                   "o processamento de ingredientes."
               ))
            )
+```
+
+```{r post_details}
+# Dados da publicação
+day <- 25
+month <- 06
+year <- 2021
+version <- 1.6
+
+# Criação das datas
+full_date <- sprintf("%s/%s/%s",day,month,year)
+full_date_js <- sprintf("%s,%s,%s", year, month, day)
+
+tagList(
+   tags$div(class="container-fluid",
+      tags$ul(
+         tags$li("Não há pendências.")
+      ),
+      tags$p("Progresso da Publicação"),
+      tags$div(class="progress",
+      tags$div(class="progress-bar",
+               role="progressbar",
+               style="width: 100%;",
+               `aria-valuenow`="100",
+               `aria-valuemin`="0",
+               `aria-valuemax`="100",
+               "100%"))
+      )
+) -> progresso
+
+# Esse Wrapper cria uma caixa de detalhes da publicação.
+
+# Cria um Card com figura lateral.
+tags$div(class="card mb-3",
+         style="max-width: 100%; margin-top: 4rem;",
+   tags$div(class="row no-gutters",
+      # DIV da IMG
+      tags$div(class="col-md-4",
+         # Imagem do Hilichurls
+         tags$img(class="card-img",
+                  src="author.png",
+                  alt="Hilichurls Scholar")),
+      # DIV de conteúdo
+      tags$div(class="col-md-8",
+         # Cria um outro Card para comportar as Navbars
+         tags$div(class="card-body",
+                  style="padding: 0px;",
+            tags$div(class="card text-justify",
+                     style="border:0px;",
+               # NAVBARS
+               tags$div(class="card-header",
+                  tags$ul(class="nav nav-tabs card-header-tabs",
+                     # Dados de Publicação
+                     tags$li(class="nav-item",
+                        tags$a(class="nav-link active",
+                               id="publication_info-tab",
+                               `data-toggle`="tab",
+                               href="#publication_info",
+                               role="tab",
+                               `aria-controls`="publication_info",
+                               `aria-selected`="true",
+                               "Dados de Publicação")),
+                     # Progresso
+                     tags$li(class="nav-item",
+                        tags$a(class="nav-link",
+                               id="progress-tab",
+                               `data-toggle`="tab",
+                               href="#progress",
+                               role="tab",
+                               `aria-controls`="progress",
+                               `aria-selected`="false",
+                               "Progresso")))),
+               # Conteúdos dos TABS
+               tags$div(class="tab-content",
+                        style="margin: 1rem;",
+                  # Dados da Publicação
+                  tags$div(class="tab-pane fade show active",
+                           id="publication_info",
+                           role="tabpanel",
+                           `aria-labelledby`="publication_info-tab",
+                           # Título
+                           tags$h5(class="card-title",
+                                   "Hilichurls Scholar's Team"),
+                           # Texto padrão.
+                           tags$p(class="card-text",
+                                  "É o time dedicado na atualização dos dados do Genshin Impact."),
+                           # Dados da publicação.
+                           tags$ul(
+                              tags$li(sprintf("Data da publicação: %s", full_date)),
+                              tags$li(sprintf("Versão do Jogo: %s", version))
+                           )),
+                  # Progresso
+                  tags$div(class="tab-pane fade",
+                           id="progress",
+                           role="tabpanel",
+                           `aria-labelledby`="progress-tab",
+                           progresso)))))),
+   tags$div(class="card-footer",
+      tags$small(class="text-muted",
+                 id="js_script"
+                 )))
+
+```
+
+<script>
+var date = "`r full_date_js`"
+</script>
+
+```{js}
+// Função para calcula a diferença entre a data de publicação e de leitura.
+function calcDate() {
+   
+   // Inicialização das variáveis.
+   var date1 = new Date(date);  // Publicacao -> 0: Janeiro, 1: Fevereiro ... 11: Dezembro
+   var date2 = new Date();            // HOJE
+    
+   // To calculate the time difference of two dates
+   var Difference_In_Time = date2.getTime() - date1.getTime();
+    
+   // To calculate the no. of days between two dates
+   var Difference_In_Days = Difference_In_Time / (1000 * 3600 * 24);
+    
+   // Para conferir os dias! Tire o comentário para avaliar.
+   //document.write(Difference_In_Days)
+    
+   // HOJE
+   if (Math.floor(Difference_In_Days) == 0) {
+      return "Atualizado hoje."
+      
+   // ONTEM
+   } else if (Math.floor(Difference_In_Days) == 1) {
+      return "Atualizado ontem."
+
+   // Dias atrás
+   } else if (Math.floor(Difference_In_Days) > 1 && Math.floor(Difference_In_Days) < 30) {
+      return "Última atualização há " + Math.floor(Difference_In_Days) + " dias."
+      
+   // 1 MÊS atrás
+   } else if (Math.floor(Difference_In_Days) >= 30 && Math.floor(Difference_In_Days) < 60) {
+      return "Última atualização há " + Math.floor(Difference_In_Days/30) + " mês."
+      
+   // Vários Meses atrás
+   } else if (Math.floor(Difference_In_Days) >= 60 && Math.floor(Difference_In_Days) < 365) {
+      return "Última atualização há " + Math.floor(Difference_In_Days/30) + " meses."
+   
+   // Primeiro ano.
+   } else if (Math.floor(Difference_In_Days) >= 365 && Math.floor(Difference_In_Days) <= 729) {
+   	return "Última atualização há " + Math.floor(Difference_In_Days/360) + " ano"
+   
+   // Demais anos.
+   } else {
+   	return "Última atualização há " + Math.floor(Difference_In_Days/360) + " anos"}
+}
+
+// Chama a função e atualiza o elemento de ID js_script
+document.getElementById("js_script").innerHTML = calcDate()
 ```
 
 ```{r creating-toc}
