--- a/culinaria/_index.Rmd
+++ b/culinaria/_index.Rmd
@@ -39,7 +39,7 @@ text-align: justify;
 
 </style>
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r loading-config, echo=FALSE, message=FALSE, warning=FALSE}
 library(shiny)
 library(magrittr)
 library(kableExtra)
